# casadi-cc-nn

./: README.md  pyproject.toml
examples/: complementarity_mlp.py  ficnn.py  mlp.py  psd.py  pwq.py
src/ccnn/: __init__.py  activation.py  containers.py  dropout.py  functional.py  init.py  linear.py  module.py  norm.py  recurrent.py
src/ccnn/convex/: ficnn.py  psd.py  pwq.py
src/ccnn/feedforward/: mlp.py
tests/: test_activation.py  test_norm.py
