[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccnn"
authors = [
  { name="Pietro Gori", email="piergo98@gmail.com" },
]
description = "Complementarity Constraints Neural Networks with CasADi"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "casadi >= 3.6.3",
    "numpy >= 1.24.2",
    "typing_extensions >= 4.6.0",
]
keywords = ["casadi", "nonlinear-optimization", "neural-networks", "complementarity-constraints"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/piergo98/casadi-cc-nn"
"Bug Tracker" = "https://github.com/piergo98/casadi-cc-nn/issues"

[tool.setuptools.dynamic]
version = {attr = "ccnn.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
color = true

[tool.isort]
profile = "black"
py_version = 39

[tool.mypy]
python_version = "3.9"
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "casadi.*",
    "matplotlib.*",
    "parameterized.*",
    "csnn.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
sort = "miss"
